--- a/index.html
+++ b/index.html
@@ -1,43 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="utf-8">
-  <title>Quoth the Giphy</title>
+    <meta charset="UTF-8">
+    <title>Director Gifs</title>
+    
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+<!-- 
+    <link rel="stylesheet" href="assets/style/style.css"> -->
+
 </head>
-
 <body>
-  <button data-person="Arnold Schwarzenegger">I'll be back</button>
-  <button data-person="Michael J Fox">
-    My happiness grows in direct proportion to my acceptance,
-    and in inverse proportion to my expectations.
-  </button>
-  <!-- STEP TWO: between the dashed lines below
-        * add three more buttons
-        * add a data-person attribute of famous people you know
-        * with a quote said by them -->
 
-  <!--  -->
+    <div class="container-fluid">
+        <h1>Bestest Directors</h1>
+        <!-- Rendered Buttons will get Dumped Here  -->
+        <div class="row" id="center-buttons">
+            <div class="col">
+                <div id="buttons-view"></div>
+            </div>
+        </div>
 
-  <button data-person="Lucille Ball">
-    Love yourself first and everything else falls into line.
-  </button>
-  <button data-person="Taylor Swift">
-    If you're horrible to me, I'm going to write a song about it,
-    and you won't like it. That's how I operate.
-  </button>
-  <button data-person="Samuel Jackson">
-    Far better is it to dare mighty things, to win glorious triumphs,
-    even though checkered by failure... than to rank with those poor spirits who
-    neither enjoy nor suffer much, because they live in a gray twilight that
-    knows not victory nor defeat.
-  </button>
+        <!-- Gifs will Get Dumped Here -->
+    <div class="row">
+            <div class="col">    
+                <div id="directors-view"></div>
+            </div>
+    
+    <!-- Form that holds new superhero searches & text -->
+        <div class="form-group">
+            <form id="directors-form"><br>
+                <label for="directors-input" id="textOnly">Add Your Favorite  Director</label><br>
+                <input type="text" id="director-input" placeholder="add a director" autocomplete="off"><br>
 
-  <div id="gifs-appear-here">
-  </div>
+                <!-- Button triggers new director to be added -->
+                <input id="add-director" type="submit" class="btn btn-info mb-2" data-toggle="buttons" value="Submit">
+            </form>
+        </div>
+    </div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
+    </div>
+  
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript" src="directorsExample.js"></script>
+<div class="directorsDiv"></div>
 </body>
-
 </html>
