--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="form-group">
             <form id="directors-form"><br>
                 <label for="directors-input" id="textOnly">Add Your Favorite  Director</label><br>
-                <input type="text" id="director-input" placeholder="add a director" autocomplete="off"><br>
+                <input type="text" id="directors-input" placeholder="add a director" autocomplete="off"><br>
 
                 <!-- Button triggers new director to be added -->
                 <input id="add-director" type="submit" class="btn btn-info mb-2" data-toggle="buttons" value="Submit">
